home2-ui/deploy/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home
    type: ui
  name: home-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home
      type: ui
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: home
        type: ui
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: home
                    type: ui
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: home-ui
          image: jtalk/home-ui:[[IMAGE_TAG]]
          startupProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            failureThreshold: 15
            periodSeconds: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 50Mi
            requests:
              cpu: 50m
              memory: 50Mi
