home2-ui/deploy/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-ui
  labels:
    app: home
    type: ui
spec:
  selector:
    app: home
    type: ui
  ports:
    - name: http
      port: 80
      targetPort: 80
