home2-ui/deploy/staging/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home-ui
  namespace: home-staging
  labels:
    app: home-ui
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - staging.jtalk.me
      secretName: home-staging-certificate
  rules:
    - host: staging.jtalk.me
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: home-ui
              servicePort: 80
